0.4.0    
    major change of internal API: moved method "Path RoutingAlgorithm.calcPath(QueryResult,QueryResult)" to a helper method QueryGraph.lookup, call queryResult.getClosestNode for the calcPath(nodeFrom,nodeTo) method
    no cachedWays and cachedPoints in Path anymore
    Path.findInstruction was moved to InstructionList.find
    if start and end point are identical an algorithm will find the path consisting only of one node, one point and one instruction (finish instruction), but without edges
    astarbi has new default values for approximation (false) and approximation_factor (1.2) in RoutingAlgorithmFactorySimple
    instead of strings use the variables in AlgorithmOptions to specify an algorithm
    use RoutingAlgorithmFactorySimple instead of RoutingAlgorithmFactory, also more constistent algorithm preparation handling due to new AlgorithmOptions, therefor removed NoOpAlgorithmPreparation
    GHResponse.getXX methods now fail fast (throw an exception) if an error while route calculation occured. See #287
    renamed less often used URL parameter 'min_path_precision' to way_point_max_distance which makes it identical to the setWayPointMaxDistance method used for simplification at OSMImport
    removed douglas.minprecision from Java API ghRequest.hints => use wayPointMaxDistance instead
    encoder.supportTurnCost is replaced by encoder.supports(TurnWeighting.class)
    CmdArgs is now a Map<String, String> instead Map<String, Object>. The value will be parsed up on every getXY call
    removed GHRequest.getHint, instead use the provided methods in GHRequest.getHints().getXY and GHRequest.getHints().put
    graph incompatibility as properties cannot be loaded => version increase necessary
        renamed osmreader.bytesForFlags to graph.bytesForFlags
        renamed config property osmreader.acceptWay to graph.flagEncoders
    default weighting is now fastest, fixing #261