@@ -71,7 +71,7 @@ public class QueryGraph implements Graph
         mainGraph = graph;
         mainNodeAccess = graph.getNodeAccess();
         mainNodes = graph.getNodes();
-        mainEdges = graph.getAllEdges().getMaxId();
+        mainEdges = graph.getAllEdges().getCount();
     }
 
     public Graph getOriginalGraph()
